--- a/style/pagina.css
+++ b/style/pagina.css
@@ -393,8 +393,13 @@
   padding-bottom: 5px;
 }
 
+.correios {
+  width: 150px;
+  padding-bottom: 15px;
+}
+
 .imgcomprasegura {
-  width: 450px;
+  width: 550px;
   padding-bottom: 35px;
   padding-top: 20px;
 }
@@ -432,7 +437,13 @@
 
 .h5_preco {
   color: orange;
-  font-weight: bold;
+  font-size: 28px;
+  padding-top: 25px;
+}
+
+.h5_preco_2 {
+  color: orange;
+  font-weight: bolder;
   font-size: 35px;
 }
 
